--- a/Android/app/src/main/res/layout/activity_career_summary.xml
+++ b/Android/app/src/main/res/layout/activity_career_summary.xml
@@ -23,12 +23,12 @@
     <ListView
         android:id="@+id/teBySemester"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="5dp"
-        android:background="@color/cardview_dark_background"
+        android:background="@android:color/white"
         android:textColor="@color/colorPrimary"
         android:textSize="25sp" />
 
