--- a/Android/app/src/main/res/layout/career_summary_list_item.xml
+++ b/Android/app/src/main/res/layout/career_summary_list_item.xml
@@ -10,14 +10,13 @@
     <TextView
         android:id="@+id/career"
         android:layout_width="match_parent"
-        android:layout_height="74dp"
-        android:background="@drawable/semester_field"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical|center_horizontal"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
-        android:textColor="#000"
+        android:textColor="@android:color/black"
         android:textSize="25sp"
         app:autoSizeTextType="none"
         tools:ignore="RtlSymmetry" />
