--- a/Android/app/src/main/res/layout/activity_semesters_list.xml
+++ b/Android/app/src/main/res/layout/activity_semesters_list.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/semester_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -22,10 +21,10 @@
     <include layout="@layout/search_teachingunit_list" />
 
     <ListView
-        android:id="@+id/navList"
+        android:id="@+id/drawerNavList"
         android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#fff"/>
+        android:background="#fff" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
