--- a/Android/app/src/main/res/layout/activity_teachingunit_list.xml
+++ b/Android/app/src/main/res/layout/activity_teachingunit_list.xml
@@ -38,5 +38,6 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@drawable/ic_save_white_24dp" />
 
+    <include layout="@layout/search_teachingunit_list" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
