--- a/Android/app/src/main/res/layout/activity_career_summary.xml
+++ b/Android/app/src/main/res/layout/activity_career_summary.xml
@@ -8,8 +8,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.CareerSummaryActivity"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#fff"
+        tools:context=".activity.CareerSummaryActivity">
 
         <TextView
             android:layout_width="match_parent"
@@ -18,22 +19,19 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="5dp"
+            android:background="#fff"
             android:gravity="center"
-            android:text="Parcours Choisi :  "
-            android:textColor="@color/colorPrimary"
+            android:text="Parcours Choisi : "
+            android:textColor="#000"
             android:textSize="25sp" />
 
         <ListView
-            android:id="@+id/teBySemester"
+
+            android:id="@+id/summaryCareerList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="5dp"
-            android:background="@android:color/white"
-            android:textColor="@color/colorPrimary"
-            android:textSize="25sp" />
+            android:orientation="vertical" />
+
     </LinearLayout>
 
     <ListView
