--- a/Android/app/src/main/res/layout/career_summary_list_item.xml
+++ b/Android/app/src/main/res/layout/career_summary_list_item.xml
@@ -1,23 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/career"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/career"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical|center_horizontal"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
-        android:textColor="@android:color/black"
-        android:textSize="25sp"
-        app:autoSizeTextType="none"
-        tools:ignore="RtlSymmetry" />
-</LinearLayout>
+    android:layout_height="75dp"
+    android:layout_marginStart="25dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginEnd="25dp"
+    android:layout_marginBottom="5dp"
+    android:gravity="center_vertical|center_horizontal"
+    android:background="#fff"
+    android:textColor="@android:color/black"
+    android:textSize="20sp" />
