--- a/Android/app/src/main/res/menu/options_menu.xml
+++ b/Android/app/src/main/res/menu/options_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_search"
         android:enabled="true"
@@ -9,4 +9,32 @@
         android:visible="false"
         app:actionViewClass="android.widget.SearchView"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/action_export"
+        android:enabled="true"
+        android:icon="@android:drawable/ic_menu_share"
+        android:title="@string/export_title"
+        android:visible="false"
+        app:showAsAction="always">
+
+        <menu>
+            <item
+                android:id="@+id/action_export_txt"
+                android:icon="@drawable/ic_file_download_black_24dp"
+                android:title="@string/export_by_txt"
+                app:showAsAction="ifRoom" />
+
+            <item
+                android:id="@+id/action_export_pdf"
+                android:icon="@drawable/ic_file_download_black_24dp"
+                android:title="@string/export_by_pdf"
+                app:showAsAction="ifRoom" />
+
+            <item
+                android:id="@+id/action_export_email"
+                android:icon="@drawable/ic_mail_outline_black_24dp"
+                android:title="@string/export_by_email"
+                app:showAsAction="ifRoom" />
+        </menu>
+    </item>
 </menu>
