--- a/Android/app/src/main/res/layout/activity_home.xml
+++ b/Android/app/src/main/res/layout/activity_home.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_page"
@@ -47,7 +46,7 @@
                     android:layout_weight="1"
                     android:onClick="goCreate"
                     android:background="@drawable/home_button"
-                    android:text="Créer" />
+                    android:text="@string/home_create_career" />
 
                 <Button
                     android:layout_marginStart="5dp"
@@ -58,7 +57,7 @@
                     android:layout_weight="1"
                     android:onClick="goEdit"
                     android:background="@drawable/home_button"
-                    android:text="Editer" />
+                    android:text="@string/home_edit_last_career" />
             </LinearLayout>
 
             <LinearLayout
@@ -78,7 +77,7 @@
                     android:layout_weight="1"
                     android:onClick="goMainCareer"
                     android:background="@drawable/home_button"
-                    android:text="Main" />
+                    android:text="@string/home_display_main_career" />
 
                 <Button
                     android:layout_marginStart="5dp"
@@ -89,7 +88,7 @@
                     android:layout_weight="1"
                     android:onClick="goMyCareersList"
                     android:background="@drawable/home_button"
-                    android:text="my list" />
+                    android:text="@string/home_display_all_career" />
             </LinearLayout>
 
             <LinearLayout
@@ -107,7 +106,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="9.5"
                     android:background="@drawable/home_button"
-                    android:text="students_career" />
+                    android:text="@string/home_display_public_career" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
