--- a/Android/app/src/main/res/layout/career_list_item.xml
+++ b/Android/app/src/main/res/layout/career_list_item.xml
@@ -1,25 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/careers"
-        android:layout_width="match_parent"
-        android:layout_height="74dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/semester_field"
-        android:gravity="center_vertical|center_horizontal"
-        android:textColor="#00BCD4"
-        android:textSize="25sp"
-        app:autoSizeTextType="none"
-        tools:ignore="RtlSymmetry" />
-
+    <include
+        android:id="@+id/customView"
+        layout="@layout/custom" />
 </LinearLayout>
