--- a/Android/app/src/main/res/layout/custom_public.xml
+++ b/Android/app/src/main/res/layout/custom_public.xml
@@ -18,28 +18,20 @@
             android:textColor="#00BCD4"
             android:paddingStart="15dp"
             android:gravity="center_vertical"
-            android:textSize="25sp"
+            android:textSize="15sp"
+            android:paddingEnd="125dp"
             tools:ignore="RtlSymmetry" />
 
-        <ImageView
-            android:id="@+id/edit_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:paddingEnd="15dp"
-            android:layout_toStartOf="@id/delete_button"
-            android:layout_marginTop="25dp"
-            android:src="@drawable/ic_mode_edit_light_blue_24dp"
-            tools:ignore="RtlSymmetry" />
 
-        <ImageView
-            android:id="@+id/delete_button"
+        <TextView
+            android:id="@+id/name_creator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:paddingEnd="15dp"
             android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_delete_red_24dp"
+            android:layout_centerVertical="true"
+            android:paddingEnd="15dp"
+            android:layout_marginEnd="15dp"
             tools:ignore="RtlSymmetry" />
+
     </RelativeLayout>
 </RelativeLayout>
