--- a/Android/app/src/main/res/layout/public_career_list_item.xml
+++ b/Android/app/src/main/res/layout/public_career_list_item.xml
@@ -5,16 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/careerName"
-        android:background="@drawable/semester_field"
-        android:layout_width="match_parent"
-        android:layout_height="74dp"
-        android:layout_margin="5dp"
-        android:paddingStart="15dp"
-        android:gravity="center_vertical"
-        android:textColor="#00BCD4"
-        android:textSize="25sp"
-        tools:ignore="RtlSymmetry" />
+    <include
+        android:id="@+id/publicCustomView"
+        layout="@layout/custom_public" />
 
 </LinearLayout>
